test/corpus/declarations.txt
===============
variables
===============

MODULE Variables;
  VAR
    i : INTEGER;
END Variables.
---

(module
  (module_header
    (kModule)
    (ident))
  (variable_decls
    (kVar)
    (variable_decl
      (ident_list
        (ident_def
          (ident)))
      (type
        (qualident
          (ident)))))
    (module_footer
      (kEnd)
      (ident)))
