test/corpus/procedures.txt
===============
Basic Procedure
===============

MODULE Procedures;
  PROCEDURE Hello;
  END Hello;
END Procedures.
---

(module
  (module_header
    (kModule)
    (ident))
  (procedure_decls
    (procedure_decl
      (procedure_heading
        (kProcedure)
        (ident_def
          (ident)))
      (procedure_body
        (kEnd))
      (ident)))
    (module_footer
      (kEnd)
      (ident)))

====================
Procedure With Begin
====================

MODULE Procedures;
  PROCEDURE Hello;
  BEGIN
  END Hello;
END Procedures.
---

(module
  (module_header
    (kModule)
    (ident))
  (procedure_decls
    (procedure_decl
      (procedure_heading
        (kProcedure)
        (ident_def
          (ident)))
      (procedure_body
        (kBegin)
        (kEnd))
      (ident)))
    (module_footer
      (kEnd)
      (ident)))
